--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "firebase": "^9.6.6",
     "framer-motion": "^6.2.6",
     "react": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-uuid": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
